[gd_scene load_steps=18 format=3 uid="uid://cwqyfflrmmchj"]

[ext_resource type="Script" uid="uid://cth6dtgl3qcuv" path="res://Scripts/UI/GrafoPlayer/grafo_player.gd" id="1_ds4nc"]
[ext_resource type="StyleBox" uid="uid://dolq1wjvg4ca3" path="res://Visual/fundo.tres" id="2_6rqgk"]
[ext_resource type="Script" uid="uid://b02agc5y4g24y" path="res://Scripts/UI/GrafoPlayer/circular_container.gd" id="2_i1jcp"]
[ext_resource type="Script" uid="uid://ndowdpq8min1" path="res://Scripts/UI/GrafoPlayer/color_rect.gd" id="2_l735g"]
[ext_resource type="Texture2D" uid="uid://ub5cke426eyw" path="res://Sprites/tutorial/notificaocao.png" id="3_uhnkw"]
[ext_resource type="Script" uid="uid://cx6lpwo3ieeup" path="res://Scripts/Player/avisoGrafo.gd" id="4_8nv0v"]
[ext_resource type="Script" uid="uid://bp10ijjl3k8n0" path="res://Scripts/UI/GrafoPlayer/aresta_manager.gd" id="4_icoyr"]
[ext_resource type="Theme" uid="uid://bq6xwlkcamw5v" path="res://Visual/saveBotao.tres" id="6_h0wb3"]
[ext_resource type="Script" uid="uid://bjb4beg5ct1nm" path="res://Visual/teste_botao.gd" id="7_5nq24"]
[ext_resource type="Script" uid="uid://myt5uoeahs21" path="res://Scripts/UI/GrafoPlayer/conformar_desistir.gd" id="8_ha5to"]
[ext_resource type="Theme" uid="uid://bujci4me1jles" path="res://Visual/Labels.tres" id="9_6qs1o"]
[ext_resource type="Script" uid="uid://xtxfkcldycc8" path="res://Scripts/UI/GrafoPlayer/confirmar_entrega.gd" id="11_l735g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8nv0v"]
atlas = ExtResource("3_uhnkw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s68j1"]
atlas = ExtResource("3_uhnkw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7iae"]
atlas = ExtResource("3_uhnkw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t34pt"]
atlas = ExtResource("3_uhnkw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_n231c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nv0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s68j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7iae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t34pt")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="grafoPlayer" type="CanvasLayer" node_paths=PackedStringArray("nodoCircularContainer")]
script = ExtResource("1_ds4nc")
nodoCircularContainer = NodePath("Panel/CircularContainer")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6156863)
script = ExtResource("2_l735g")
posicao_final = Vector2(0, 400)

[node name="aviso" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(320, 339.42)
sprite_frames = SubResource("SpriteFrames_n231c")
autoplay = "default"
script = ExtResource("4_8nv0v")

[node name="Timer" type="Timer" parent="aviso"]

[node name="Panel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.5
offset_top = -154.5
offset_right = 244.5
offset_bottom = 154.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_6rqgk")

[node name="CircularContainer" type="Control" parent="Panel" node_paths=PackedStringArray("arestaManager")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -30.324997
offset_right = 9.0
offset_bottom = -10.325027
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_i1jcp")
angulo_inicial = 90.0
arestaManager = NodePath("../ArestaManager")

[node name="ArestaManager" type="Control" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.5
offset_top = -154.5
offset_right = -244.5
offset_bottom = -154.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_icoyr")

[node name="Entregar2" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 389.18
offset_top = -41.0
offset_right = 471.18018
offset_bottom = -10.0
grow_vertical = 0
theme = ExtResource("6_h0wb3")
text = "Entregar"
script = ExtResource("7_5nq24")

[node name="desistir" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -473.025
offset_top = -41.0
offset_right = -391.02515
offset_bottom = -10.0000305
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("6_h0wb3")
text = "Desistir"
script = ExtResource("7_5nq24")

[node name="conformar Desistir" type="Panel" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.75
offset_top = -85.0
offset_right = 133.75
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_6rqgk")
script = ExtResource("8_ha5to")

[node name="txtConfirmarDesistencia" type="Label" parent="Panel/conformar Desistir"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -114.25
offset_top = 10.455
offset_right = 114.25
offset_bottom = 28.455
grow_horizontal = 2
theme = ExtResource("9_6qs1o")
text = "Tem Certeza que deseja desistir?"

[node name="GridContainer" type="GridContainer" parent="Panel/conformar Desistir"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -20.0
offset_right = 79.5
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 100
columns = 2

[node name="simDesistir" type="Button" parent="Panel/conformar Desistir/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("6_h0wb3")
text = "Sim"
script = ExtResource("7_5nq24")

[node name="naoDesistir" type="Button" parent="Panel/conformar Desistir/GridContainer"]
layout_mode = 2
theme = ExtResource("6_h0wb3")
text = "Não
"
script = ExtResource("7_5nq24")

[node name="ConfirmarEntrega" type="Panel" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.5
offset_top = -85.0
offset_right = 149.5
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_6rqgk")
script = ExtResource("11_l735g")

[node name="txtConfirmarEntrega" type="Label" parent="Panel/ConfirmarEntrega"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.25
offset_top = 7.33
offset_right = 144.25
offset_bottom = 78.33
grow_horizontal = 2
theme = ExtResource("9_6qs1o")
text = "Tem certeza que deseja finalizar a fase?"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="Panel/ConfirmarEntrega"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -20.0
offset_right = 36.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 100
columns = 2

[node name="simEntrega" type="Button" parent="Panel/ConfirmarEntrega/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("6_h0wb3")
text = "Sim"
script = ExtResource("7_5nq24")

[node name="naoEntrega" type="Button" parent="Panel/ConfirmarEntrega/GridContainer"]
layout_mode = 2
theme = ExtResource("6_h0wb3")
text = "Não
"
script = ExtResource("7_5nq24")

[node name="sair" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.03
offset_top = 8.69
offset_right = -17.029999
offset_bottom = 31.689999
grow_horizontal = 0
theme = ExtResource("6_h0wb3")
text = "Voltar
"
script = ExtResource("7_5nq24")

[connection signal="timeout" from="aviso/Timer" to="aviso" method="_on_timer_timeout"]
[connection signal="mudarMatrizPlayer" from="Panel/ArestaManager" to="." method="_on_aresta_manager_mudar_matriz_player"]
[connection signal="pressed" from="Panel/Entregar2" to="Panel/ConfirmarEntrega" method="_on_entregar_2_pressed"]
[connection signal="pressed" from="Panel/desistir" to="." method="_on_desistir_pressed"]
[connection signal="pressed" from="Panel/desistir" to="Panel/conformar Desistir" method="_on_desistir_pressed"]
[connection signal="pressed" from="Panel/conformar Desistir/GridContainer/simDesistir" to="Panel/conformar Desistir" method="_on_sim_desistir_pressed"]
[connection signal="pressed" from="Panel/conformar Desistir/GridContainer/naoDesistir" to="Panel/conformar Desistir" method="_on_nao_desistir_pressed"]
[connection signal="pressed" from="Panel/ConfirmarEntrega/GridContainer/simEntrega" to="." method="_on_sim_entrega_pressed"]
[connection signal="pressed" from="Panel/ConfirmarEntrega/GridContainer/simEntrega" to="Panel/ConfirmarEntrega" method="_on_sim_entrega_pressed"]
[connection signal="pressed" from="Panel/ConfirmarEntrega/GridContainer/naoEntrega" to="Panel/ConfirmarEntrega" method="_on_nao_entrega_pressed"]
[connection signal="pressed" from="Panel/sair" to="." method="_on_sair_pressed"]
